portal-test/gtk4: Remove stray "

--- a/portal-test/gtk4/window.ui
+++ b/portal-test/gtk4/window.ui
@@ -553,7 +553,7 @@
               <property name="row">18</property>
             </layout>
           </object>
-        </child>"
+        </child>
         <child>
           <object class="GtkLabel">
             <property name="halign">end</property>
