--- a/portal-test/gtk4/window.ui
+++ b/portal-test/gtk4/window.ui
@@ -574,6 +574,78 @@
             </layout>
           </object>
         </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="halign">end</property>
+            <property name="label">USB</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="row">20</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStack" id="usbStack">
+            <layout>
+              <property name="column">1</property>
+              <property name="row">20</property>
+            </layout>
+
+            <child>
+              <object class="GtkStackPage">
+                <property name="name">request</property>
+                <property name="child">
+                  <object class="GtkButton">
+                    <property name="label">List USB Devices</property>
+                    <signal name="clicked" handler="_listUsbDevices"/>
+                  </object>
+                </property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkStackPage">
+                <property name="name">usb-devices</property>
+                <property name="child">
+                  <object class="GtkBox">
+
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label">Close Session</property>
+                        <signal name="clicked" handler="_closeUsbSession"/>
+                      </object>
+                    </child>
+
+                  </object>
+                </property>
+              </object>
+            </child>
+
+          </object>
+        </child>
+
+        <child>
+          <object class="GtkScrolledWindow">
+            <layout>
+              <property name="column">2</property>
+              <property name="column-span">2</property>
+              <property name="row">20</property>
+              <property name="row-span">2</property>
+            </layout>
+            <child>
+              <object class="GtkListBox" id="usbListBox">
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="selection-mode">none</property>
+                <style>
+                  <class name="navigation-sidebar" />
+                </style>
+              </object>
+            </child>
+          </object>
+        </child>
+
+
       </object>
     </child>
   </template>
